tests/fixtures/fail/stdlib/stdlib_io_invalid_handle_vm.walrus
import "std/io";

io.file_close(999999);
